--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://saranyass14.github.io/car-check",
+  "homepage": "http://saranyass14.github.io/car_check",
   "name": "car-check",
   "version": "0.1.0",
   "private": true,
